--- a/package.json
+++ b/package.json
@@ -17,9 +17,16 @@
   },
   "homepage": "https://github.com/OmarOsamaDiab/online-shop-e-commerce-#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^2.4.1",
+    "dateformat": "^3.0.3",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "express-validator": "^6.6.1",
+    "fetch-connect": "^1.0.0",
     "jshint": "^2.12.0",
     "mongodb": "^3.6.1",
     "mongoose": "^5.10.3",
